# pyo3-share-types-with-python-example

./: .gitignore  README.md
common/: Cargo.toml
common/src/: lib.rs
pyo3_common/: Cargo.toml
pyo3_common/src/: lib.rs
python/: main.py
python/python_lib/: lib.py
rust/: Cargo.toml
rust/src/: main.rs
