[package]
# `name` here is name of the package.
name = "pyo3_common"
version = "0.1.0"
edition = "2021"

[lib]
# The name of the native library. This is the name which will be used in Python to import the
# library (i.e. `import string_sum`). If you change this, you must also change the name of the
# `#[pymodule]` in `src/lib.rs`.
name = "pyo3_common"

# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.19.0" }

[features]
extension-module = ["pyo3/extension-module"]
